--- a/src/main/resources/templates/salaEspera.html
+++ b/src/main/resources/templates/salaEspera.html
@@ -21,9 +21,10 @@
     	<div class="col-8 tablaPreguntas">
     		<h2 th:text="'Reto - ' + ${dtoReto.nombre}"></h2>
     		<h3>Participantes</h3>
+    		<h5 id="sinParticipantes">Sin participantes, aún.</h5>
 	    	<div class="row participantes">
 	    	</div>
-	    	<form id="comenzarReto" action="comenzar-reto" th:if="${usuario == null}" method="POST">
+	    	<form id="comenzarReto" action="comenzar-reto" th:if="${usuario == null}" method="POST" style="display: none;">
 				<button class="btn btn-azul btn-lg" onclick="this.parentNode.submit()">Comenzar Reto</button>
 			</form>
 			
@@ -62,6 +63,15 @@
 		  			dataType: "text",
 		  			success: function(datos){
 		  				participantes = JSON.parse(datos);
+		  				if(participantes.length == 0){
+		  					$("#sinParticipantes").css("display", "block");
+		  					$("#comenzarReto").css("display", "none");
+		  				}
+		  				else{
+		  					$("#sinParticipantes").css("display", "none");
+		  					$("#comenzarReto").css("display", "block");
+		  				}
+		  				
 		  				$("div.participantes").empty();
 		  				participantes.forEach(function(participante) {
 		  		  			insertarParticipante(participante);
