Integración con TFG.

--- a/src/main/resources/templates/insertarPregunta.html
+++ b/src/main/resources/templates/insertarPregunta.html
@@ -63,6 +63,7 @@
 			   </tfoot>
 			  </table>
 			</form>
+			<a class="btn btn-secondary btn-lg" href="./">Atrás</a>
 			<button type="button" class="btn btn-azul btn-lg insertarOpcion">
 			  Añadir Opción
 			</button>
